Eksik ama başlangıç olarak yeterli daha sonra düzeltilecek