@@ -10,10 +10,17 @@
     <version>1.0-SNAPSHOT</version>
 
 
+
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <resources.directory>src/main/resources</resources.directory>
         <webapp.directory>src/main/web</webapp.directory>
+        <org.postgresql.version>42.2.5</org.postgresql.version>
+        <primefaces.version>6.1</primefaces.version>
+        <source.version>1.8</source.version>
+        <jsf.version>2.2.19</jsf.version>
+        <jsf.extension.version>3.1.0</jsf.extension.version>
+        <javax.servlet.version>3.0.1</javax.servlet.version>
     </properties>
 
 
@@ -22,49 +29,65 @@
             <groupId>javax</groupId>
             <artifactId>javaee-web-api</artifactId>
             <version>7.0</version>
-            <!-- SET SCOPE TO "provided" IF SERVER ALREADY EMBED IT -->
+            <scope>provided</scope><!-- SET SCOPE TO "provided" IF SERVER ALREADY EMBED IT -->
+        </dependency>
+
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>${javax.servlet.version}</version>
             <scope>provided</scope>
         </dependency>
 
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
-            <version>9.3-1102-jdbc41</version>
+            <version>${org.postgresql.version}</version>
         </dependency>
 
         <dependency>
             <groupId>com.sun.faces</groupId>
             <artifactId>jsf-api</artifactId>
-            <version>2.2.10</version>
+            <version>${jsf.version}</version>
         </dependency>
         <dependency>
             <groupId>com.sun.faces</groupId>
             <artifactId>jsf-impl</artifactId>
-            <version>2.2.10</version>
+            <version>${jsf.version}</version>
         </dependency>
 
 
         <dependency>
             <groupId>org.primefaces</groupId>
             <artifactId>primefaces</artifactId>
-            <version>5.1</version>
+            <version>${primefaces.version}</version>
         </dependency>
+
         <dependency>
-            <groupId>org.primefaces.themes</groupId>
+            <groupId>org.primefaces.extensions</groupId>
             <artifactId>all-themes</artifactId>
-            <version>1.0.10</version>
+            <version>1.0.8</version>
         </dependency>
+
         <dependency>
             <groupId>org.primefaces.extensions</groupId>
             <artifactId>primefaces-extensions</artifactId>
-            <version>3.0.0</version>
+            <version>${jsf.extension.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
 
     </dependencies>
 
 
     <build>
+
+
         <resources>
             <resource>
                 <directory>${resources.directory}</directory>
@@ -82,8 +105,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.1</version>
                 <configuration>
-                    <source>1.7</source>
-                    <target>1.7</target>
+                    <source>${source.version}</source>
+                    <target>${source.version}</target>
                 </configuration>
             </plugin>
 
@@ -120,6 +143,23 @@
                 </configuration>
             </plugin>
 
+            <!--<plugin>-->
+            <!--<groupId>org.apache.maven.plugins</groupId>-->
+            <!--<artifactId>maven-surefire-plugin</artifactId>-->
+            <!--<version>2.20</version>-->
+            <!--<configuration>-->
+            <!--<forkCount>3</forkCount>-->
+            <!--<reuseForks>true</reuseForks>-->
+            <!--<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>-->
+            <!--&lt;!&ndash;<testFailureIgnore>true</testFailureIgnore>&ndash;&gt;-->
+            <!--<includes>-->
+            <!--&lt;!&ndash; Sadece suite'te tanımlı test sınıflarını çalıştır. &ndash;&gt;-->
+            <!--<include>**/*TestSuite.java</include>-->
+            <!--&lt;!&ndash; Bütün servis testleri çalıştırır &ndash;&gt;-->
+            <!--<include>**/*Test.java</include>-->
+            <!--</includes>-->
+            <!--</configuration>-->
+            <!--</plugin>-->
         </plugins>
 
     </build>
@@ -132,5 +172,4 @@
             <layout>default</layout>
         </repository>
     </repositories>
-
 </project>
